# hachiko

./: Cargo.toml
config/default/: simple_storage_validator.toml
contract-abi/: SimpleStorage.json
src/: lib.rs  simple_storage.rs  simple_storage_validator.rs  validate.rs
validator_derive/: Cargo.toml
validator_derive/src/: lib.rs
